# VideoCardShop

./: .gitignore  .pre-commit-config.yaml  README.MD  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
src/app/: main.py
src/app/domain/: exceptions.py
src/app/settings/: app.py  paths.py
src/app/shop/backend/core/: create.py  dependencies.py  exceptions.py  extensions.py  routers.py
src/app/shop/backend/handlers/pages/: __init__.py  main.py
src/app/shop/backend/settings/: paths.py
src/app/shop/frontend/static/css/: styles.css
src/app/shop/frontend/static/js/: app.js
src/app/shop/frontend/static/js/constants/: modal.js  products.js
src/app/shop/frontend/static/js/core/: startup.js
src/app/shop/frontend/static/js/domain/: product.js
src/app/shop/frontend/static/js/modules/: cart.js  product.js
src/app/shop/frontend/static/js/utils/: cartPopup.js
src/app/shop/frontend/templates/: index.html
src/core/logging/: format.py  setup.py
src/settings/: paths.py
